# internal/handler/incoming/router.handler.go
@@ -1,0 +1,8 @@
+package incoming
+
+import "github.com/gin-gonic/gin"
+
+func (h *Handler) NewRoutes(e *gin.RouterGroup) {
+	group := e.Group("/incoming")
+	group.POST("/baileys", h.WebhookEventBaileys)
+}
